--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             <a href="index.html" class="nav-link">HOME</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">ABOUT</a>
+            <a href="#about" class="nav-link">ABOUT</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">SKILLS</a>
+            <a href="#skills" class="nav-link">SKILLS</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">EXPERIENCE</a>
+            <a href="#experience" class="nav-link">EXPERIENCE</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">PORTFOLIO</a>
+            <a href="#portfolio" class="nav-link">PORTFOLIO</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">CONTACT</a>
+            <a href="#contact" class="nav-link">CONTACT</a>
         </li>
     </ul>
 
@@ -311,6 +311,47 @@
                     </div>
                 </div> 
             </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="heading-group">
+                <span class="section-head-small">Contact Me</span>
+                <h5 class="section-head-large">Let's work together!</h5>
+            </div>
+
+            <div class="contact-info-wrapper">
+                <div class="contact-info">
+                    
+                    <div class="contact-info-item">
+                        <div class="info-item-icon">
+                            <i class="ion-location"></i>
+                        </div>
+                        <div class="data-wrapper">
+                            <span class="info-item-data">8300 Mimi Ln</span>
+                            <span class="info-item-data">Austin, TX 78724</span>
+                            <span class="info-item-data">United States</span>
+                        </div>
+                    </div>
+
+                    <div class="contact-info-item">
+                        <div class="info-item-icon">
+                            <i class="ion-ios-telephone"></i>
+                        </div>
+                        <div class="data-wrapper">
+                            <span class="info-item-data">(830)-388-9717</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <form action="" class="contact-form">
+               <input type="text" class="input" placeholder="Full Name" required>
+               <input type="email" class="input" placeholder="Email Address" required>
+               <input type="text" class="input" placeholder="Subject" required> 
+               <textarea rows="7" placeholder="Message" required></textarea>
+               <button class="btn btn-blue">Send Message</button>
+            </form>
         </div>
     </section>
 </main>
