finished website and added functional links. Also works with all screen sizes

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="social-media-wrapper">
         <span>Follow Me On</span>
         <div class="social-media">
-            <a href="#" class="sm-link"><i class="ion-social-instagram"></i></a>
-            <a href="#" class="sm-link"><i class="ion-social-twitter"></i></a>
-            <a href="#" class="sm-link"><i class="ion-social-linkedin"></i></a>
+            <a href="https://www.instagram.com/notdarrengarcia/?hl=en" class="sm-link"><i class="ion-social-instagram"></i></a>
+            <a href="https://twitter.com/1darrengarcia" class="sm-link"><i class="ion-social-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/darren-garcia-3743721aa/" class="sm-link"><i class="ion-social-linkedin"></i></a>
         </div>
     </div>
 
@@ -80,22 +80,20 @@
             <div class="about-me-intro">
                 <div class="intro-description">
                     <p>
-                       <span>Hey! My name is Darren Garcia</span> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, molestiae? Optio, in laboriosam maiores eveniet, praesentium sunt vero, quisquam suscipit autem provident est! Corrupti perferendis atque ullam sunt magni aut!
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio nisi impedit. Sequi saepe natus quis impedit nesciunt enim? Atque optio vitae at voluptatem harum culpa autem aut recusandae! Officiis.
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt est excepturi corporis hic? Ducimus natus repellendus enim adipisci numquam repellat, accusamus expedita minima nihil, in dolor, aspernatur quidem sapiente atque.
+                       <span>Hey! My name is Darren Garcia.</span> I am a freelance photographer and cinematographer based out of Austin, TX. I have always had a passion for creating something out of nothing. I come from a small town called Boerne, TX right outside of San Antonio. 
+                       My roots are based in telling the stories that matter. Over my professional life I have had the pleasure of travelling to different countries to make documentaries and help raise money for charities. I've also managed to win some prestigious awards in my field of work.
+                       One of them notably being a Telly Award where I won alongside HBO for their work in Game Of Thrones. My films have also been broadcasted internationally allowing me the honor of being an International Filmmmaker.   
                     </p>
 
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, molestiae? Optio, in laboriosam maiores eveniet, praesentium sunt vero, quisquam suscipit autem provident est! Corrupti perferendis atque ullam sunt magni aut!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio nisi impedit. Sequi saepe natus quis impedit nesciunt enim? Atque optio vitae at voluptatem harum culpa autem aut recusandae! Officiis.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt est excepturi corporis hic? Ducimus natus repellendus enim adipisci numquam repellat, accusamus expedita minima nihil, in dolor, aspernatur quidem sapiente atque.
+                        As any creative knows, it can be very hard to just stay complacent in one place. Starting in 2019 I became interested in coding and seeing the possibilites that can come with it. I started to become more serious late in 2020 when I was accepted to a program hosted by the University of Texas
+                        to be taught how to code. In the course I became a fullstack developer learning both front end and back end. I developed a close relationship with designing and creating intuitive interfaces for websites. I have also learned the best way to strategize and incorporate proper SEO techniques to shoot
+                        websites to the top of Google. How to make the website function for years to come. And be easily managed by either you or me by a few simple clicks.
                     </p>
                 </div>
                 <div class="call-to-action">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aliquam reprehenderit assumenda rem dolorem. Officia eum fugiat quisquam corrupti cumque iusto? Animi, quis. Repellendus aperiam possimus, officiis dolorum laudantium enim!
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, quis neque labore explicabo dolorem totam itaque enim commodi nam fugit incidunt pariatur quasi ea suscipit unde amet est asperiores eveniet.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed cumque perferendis officia officiis reprehenderit. Similique praesentium cum, incidunt voluptates deleniti, iure natus animi nobis cumque earum, asperiores totam eveniet. Nemo?
+                        If you need a beautiful website to show how fantastic you and your company are then click the button below and lets get started!
                     </p>
                     <a href="#" class="btn cta-btn">Hire me</a>
                 </div>
@@ -142,7 +140,7 @@
                         <h5 class="skill-name">Html</h5>
                     </div>
                     <p class="skill-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, alias amet ea cum laborum fuga nesciunt? Voluptates numquam, alias eum voluptatem blanditiis, minus ipsam quas quisquam maxime excepturi maiores mollitia?
+                        I use HTML to create the foundation for your website and have a clean and easily organized way to manage it.
                     </p>
                 </div>
                 <div class="grid-item blue">
@@ -150,7 +148,7 @@
                         <h5 class="skill-name">Css</h5>
                     </div>
                     <p class="skill-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, alias amet ea cum laborum fuga nesciunt? Voluptates numquam, alias eum voluptatem blanditiis, minus ipsam quas quisquam maxime excepturi maiores mollitia?
+                        This is where all the magic happens. I use CSS to design and make the website you see in front of you. It makes up all of what will make your website look perfect.
                     </p>
                 </div>
                 <div class="grid-item yellow">
@@ -158,15 +156,15 @@
                         <h5 class="skill-name">Javascript</h5>
                     </div>
                     <p class="skill-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, alias amet ea cum laborum fuga nesciunt? Voluptates numquam, alias eum voluptatem blanditiis, minus ipsam quas quisquam maxime excepturi maiores mollitia?
+                        With JavaScript I'll be able to add motion graphics to your website making it easier than ever for customers and viewers to scroll through your website.
                     </p>
                 </div>
                 <div class="grid-item purple">
                     <div class="item-skill">
-                        <h5 class="skill-name">Bootstrap</h5>
+                        <h5 class="skill-name">Premier Pro</h5>
                     </div>
                     <p class="skill-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, alias amet ea cum laborum fuga nesciunt? Voluptates numquam, alias eum voluptatem blanditiis, minus ipsam quas quisquam maxime excepturi maiores mollitia?
+                        Adobe Premier Pro is a software that will allow me to edit any video you might need. If you have a video, great. If you need a new one, we can make sure your vision is completed and brought to the big screen. 
                     </p>
                 </div>
                 <div class="grid-item dark-blue">
@@ -174,7 +172,15 @@
                         <h5 class="skill-name">Photoshop</h5>
                     </div>
                     <p class="skill-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, alias amet ea cum laborum fuga nesciunt? Voluptates numquam, alias eum voluptatem blanditiis, minus ipsam quas quisquam maxime excepturi maiores mollitia?
+                        Photoshop will be a big help adding elements to your website to make it perfectly you. We can add pictures, GIFs, and background layers all through the power of Photoshop.
+                    </p>
+                </div>
+                <div class="grid-item light-grey">
+                    <div class="item-skill">
+                        <h5 class="skill-name">Lightroom</h5>
+                    </div>
+                    <p class="skill-description">
+                        If you have photos that need to be edited, Lightroom will be the perfect place for them. With almost a decade of editing under my belt, editing your photos will be a breeze and it will make your website stand out.
                     </p>
                 </div>
             </div>
@@ -200,11 +206,21 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-heading">
-                        <h3 class="timeline-entry-name">Web Developer</h3>
-                        <span>2019 - Present</span>
+                        <h3 class="timeline-entry-name">photographer</h3>
+                        <span>2011 - present</span>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aspernatur veritatis magni quos adipisci tempora asperiores error earum sunt, saepe odit cumque totam optio voluptates harum dicta inventore! Magnam, doloribus.
+                         I started photography like most people. I picked up my parents camera and I have not been able to put it down since. I have done countless number of Photoshoots and had the honor of having my picture on the cover of a magazine.
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-heading">
+                        <h3 class="timeline-entry-name">Cinematography</h3>
+                        <span>2012 - Present</span>
+                    </div>
+                    <p>
+                        With photos comes video. It was long after that I started to develop a serious interest in capturing people's stories and having them be heard. My work even allowed me to give a TEDx talk on storytelling and how important it is.
                     </p>
                 </div>
 
@@ -214,17 +230,7 @@
                         <span>2019 - Present</span>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aspernatur veritatis magni quos adipisci tempora asperiores error earum sunt, saepe odit cumque totam optio voluptates harum dicta inventore! Magnam, doloribus.
-                    </p>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-heading">
-                        <h3 class="timeline-entry-name">Web Developer</h3>
-                        <span>2019 - Present</span>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aspernatur veritatis magni quos adipisci tempora asperiores error earum sunt, saepe odit cumque totam optio voluptates harum dicta inventore! Magnam, doloribus.
+                        Becoming a fullstack Web Developer will allow me to combine everything I love and put it into one. I want to be your one stop shop for everything necessary to create a stunning website for you.
                     </p>
                 </div>
             </div>
@@ -240,73 +246,73 @@
 
             <div class="grid">
                 <div class="grid-item">
-                    <img class="portfolio-item-image" src="images/DSCF0166.jpg" alt="">
+                    <img class="portfolio-item-image" src="images/Color_Picker_Landing.png" alt="">
                     <div class="portfolio-item-info">
-                        <h5 class="project-name">Sweet Berry Farms <span>01</span></h5>
+                        <h5 class="project-name">Color Picker<span>01</span></h5>
                         <span class="project-type">Website</span>
                         <div class="info-cta">
-                            <a href="#" class="btn info-tbn">Live Demo</a>
-                            <a href="#" class="btn info-tbn">Source Code</a>
+                            <a href="https://portmeister.github.io/color_themes/" class="btn info-tbn">Live Demo</a>
+                            <a href="https://github.com/Portmeister/color_themes" class="btn info-tbn">Source Code</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="grid-item">
-                    <img class="portfolio-item-image" src="images/DSCF0166.jpg" alt="">
+                    <img class="portfolio-item-image" src="images/weather_dashboard.png" alt="">
                     <div class="portfolio-item-info">
-                        <h5 class="project-name">Sweet Berry Farms <span>01</span></h5>
+                        <h5 class="project-name">Weather Dashboard<span>02</span></h5>
                         <span class="project-type">Website</span>
                         <div class="info-cta">
-                            <a href="#" class="btn info-tbn">Live Demo</a>
-                            <a href="#" class="btn info-tbn">Source Code</a>
+                            <a href="https://notdarrengarcia.github.io/homework_6/" class="btn info-tbn">Live Demo</a>
+                            <a href="https://github.com/notdarrengarcia/homework_6" class="btn info-tbn">Source Code</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="grid-item">
-                    <img class="portfolio-item-image" src="images/DSCF0166.jpg" alt="">
+                    <img class="portfolio-item-image" src="images/workday_planner.png" alt="">
                     <div class="portfolio-item-info">
-                        <h5 class="project-name">Sweet Berry Farms <span>01</span></h5>
+                        <h5 class="project-name">Workday Planner<span>03</span></h5>
                         <span class="project-type">Website</span>
                         <div class="info-cta">
-                            <a href="#" class="btn info-tbn">Live Demo</a>
-                            <a href="#" class="btn info-tbn">Source Code</a>
+                            <a href="https://notdarrengarcia.github.io/homework_5/" class="btn info-tbn">Live Demo</a>
+                            <a href="https://github.com/notdarrengarcia/homework_5" class="btn info-tbn">Source Code</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="grid-item">
-                    <img class="portfolio-item-image" src="images/DSCF0166.jpg" alt="">
+                    <img class="portfolio-item-image" src="images/sweet_berry_farms.jpg" alt="">
                     <div class="portfolio-item-info">
-                        <h5 class="project-name">Sweet Berry Farms <span>01</span></h5>
-                        <span class="project-type">Website</span>
+                        <h5 class="project-name">Sweet Berry Farms <span>04</span></h5>
+                        <span class="project-type">Film</span>
                         <div class="info-cta">
-                            <a href="#" class="btn info-tbn">Live Demo</a>
-                            <a href="#" class="btn info-tbn">Source Code</a>
+                            <a href="https://www.youtube.com/watch?v=4EqHaVFQrhI" class="btn info-tbn">Watch</a>
+                            <a href="https://www.youtube.com/channel/UCgewrKpZDqK5p26WOZ78gYg?view_as=subscriber" class="btn info-tbn">Subscribe</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="grid-item">
-                    <img class="portfolio-item-image" src="images/DSCF0166.jpg" alt="">
+                    <img class="portfolio-item-image" src="images/big_bend.png" alt="">
                     <div class="portfolio-item-info">
-                        <h5 class="project-name">Sweet Berry Farms <span>01</span></h5>
-                        <span class="project-type">Website</span>
+                        <h5 class="project-name">Big Bend<span>05</span></h5>
+                        <span class="project-type">Cinematic Vlog</span>
                         <div class="info-cta">
-                            <a href="#" class="btn info-tbn">Live Demo</a>
-                            <a href="#" class="btn info-tbn">Source Code</a>
+                            <a href="https://www.youtube.com/watch?v=TkUS7dCn4hM" class="btn info-tbn">Watch</a>
+                            <a href="https://www.youtube.com/channel/UCgewrKpZDqK5p26WOZ78gYg?view_as=subscriber" class="btn info-tbn">Subscribe</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="grid-item">
-                    <img class="portfolio-item-image" src="images/DSCF0166.jpg" alt="">
+                    <img class="portfolio-item-image" src="images/love.png" alt="">
                     <div class="portfolio-item-info">
-                        <h5 class="project-name">Sweet Berry Farms <span>01</span></h5>
-                        <span class="project-type">Website</span>
+                        <h5 class="project-name">LOVE<span>06</span></h5>
+                        <span class="project-type">Film</span>
                         <div class="info-cta">
-                            <a href="#" class="btn info-tbn">Live Demo</a>
-                            <a href="#" class="btn info-tbn">Source Code</a>
+                            <a href="https://www.youtube.com/watch?v=gl-Wh6o7pFQ" class="btn info-tbn">Watch</a>
+                            <a href="https://www.youtube.com/channel/UCgewrKpZDqK5p26WOZ78gYg?view_as=subscriber" class="btn info-tbn">Subscribe</a>
                         </div>
                     </div>
                 </div> 
