--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Import fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet" />
     <!--Import icons-->
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
