updated portfolio and added project2

--- a/index.html
+++ b/index.html
@@ -282,13 +282,13 @@
                 </div>
 
                 <div class="grid-item">
-                    <img class="portfolio-item-image" src="images/sweet_berry_farms.jpg" alt="">
+                    <img class="portfolio-item-image" src="images/DungeonScribe2.jpg" alt="">
                     <div class="portfolio-item-info">
-                        <h5 class="project-name">Sweet Berry Farms <span>04</span></h5>
-                        <span class="project-type">Film</span>
+                        <h5 class="project-name">Dungeon Scribe <span>04</span></h5>
+                        <span class="project-type">DND Server</span>
                         <div class="info-cta">
-                            <a href="https://www.youtube.com/watch?v=4EqHaVFQrhI" class="btn info-tbn">Watch</a>
-                            <a href="https://www.youtube.com/channel/UCgewrKpZDqK5p26WOZ78gYg?view_as=subscriber" class="btn info-tbn">Subscribe</a>
+                            <a href="https://dungeon-scribe.herokuapp.com/" class="btn info-tbn">Live Demo</a>
+                            <a href="https://github.com/jeishu/dungeon_scribe" class="btn info-tbn">Source Code</a>
                         </div>
                     </div>
                 </div>
